Full project before deployment
